k8s/raft-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raft-node-0
  labels:
    app: raft-node-0
spec:
  selector:
    matchLabels:
      app: raft-node-0
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: raft-node-0
    spec:
      containers:
        - name: raft-node-0
          image: thaivan/cafe-raft:1.0.0
          ports:
            - containerPort: 8080

      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: raft-node-1
  labels:
    app: raft-node-1
spec:
  selector:
    matchLabels:
      app: raft-node-1
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: raft-node-1
    spec:
      containers:
        - name: raft-node-1
          image: thaivan/cafe-raft:1.0.0
          ports:
            - containerPort: 8080

      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raft-node-2
  labels:
    app: raft-node-2
spec:
  selector:
    matchLabels:
      app: raft-node-2
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: raft-node-2
    spec:
      containers:
        - name: raft-node-2
          image: thaivan/cafe-raft:1.0.0
          ports:
            - containerPort: 8080
          
      restartPolicy: Always
