k8s/02-raft-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-0-service
spec:
  selector:
    app: raft-node-0
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000

---

apiVersion: v1
kind: Service
metadata:
  name: node-1-service
spec:
  selector:
    app: raft-node-1
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32001

---

apiVersion: v1
kind: Service
metadata:
  name: node-2-service
spec:
  selector:
    app: raft-node-2
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32002
